completed assignment ALL steps
