# routes/temple.js
@@ -1,23 +1,22 @@
 const routes = require('express').Router();
 const temples = require('../controllers/temple.js');
-
+// Retrieve all published Temples
 routes.get('/', temples.findAll);
 
 // Create a new Temple
 routes.post('/', temples.create);
 
-// Retrieve all published Temples
 
 // Retrieve a single Temple with id
 routes.get('/:temple_id', temples.findOne);
 
 // Update a Temple with id
-// routes.put('/:id', temples.update);
+routes.put('/:id', temples.update);
 
 // Delete a Temple with id
-// routes.delete('/:id', temples.delete);
+routes.delete('/:id', temples.delete);
 
-// Create a new Temple
-// routes.delete('/', temples.deleteAll);
+// Delet All temples
+routes.delete('/', temples.deleteAll);
 
 module.exports = routes;
